# android-cross-compile

./: README.md
cmake/: CMakeLists.txt
cmake/cmake_toolchain/: aarch64.cmake  armv7a.cmake  x86_64.cmake
hello-world/: CMakeLists.txt  README.md  compile.sh  hello-world.c  hello-world.cpp
hello-world/toolchain/: arm64.cmake
interface-list/: CMakeLists.txt  README.md  interface-list.c  libpcap_build.sh
interface-list/toolchain/: arm32.cmake
pcap/: CMakeLists.txt  README.md
script/: aarch64.sh  armv7a.sh  cross-compile.sh  x86_64.sh
