cmake_minimum_required(VERSION 3.11)

project(Example)

SET(SOURCE example.c CACHE STRING "외부에서 받아온 파일명")
SET(OUTPUT example CACHE STRING "외부에서 받아온 파일명")

IF(DEFINED CMAKE_SYSTEM_PROCESSOR)
    SET(OUTPUT ${OUTPUT}.${CMAKE_SYSTEM_PROCESSOR})
ELSE()
    SET(OUTPUT ${OUTPUT}.x86_64)
ENDIF()

ADD_EXECUTABLE(${OUTPUT} ${SOURCE})
